<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_video_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonRecordVideo"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_record_video" />

        <Button
            android:id="@+id/buttonFromGallery"
            android:layout_width="191dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_select_video" />
    </LinearLayout>

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="328dp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/buttonUseVIdeo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_use_video"
        android:visibility="invisible" />


</LinearLayout>
