<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/promptChooseDecks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/label_choose_decks"
            android:textSize="30sp"
            tools:ignore="HardcodedText" />

        <RadioGroup
            android:id="@+id/radioGroupQuizChoice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonMultipleChoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onQuizTypeClicked"
                android:text="@string/button_multiple_choice" />

            <RadioButton
                android:id="@+id/radioButtonFlashCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onQuizTypeClicked"
                android:text="@string/button_flash_card" />

            <RadioButton
                android:id="@+id/radioButtonWriteUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onQuizTypeClicked"
                android:text="@string/button_write_up" />
        </RadioGroup>

        <TextView
            android:id="@+id/textViewChooseNumberOfQuestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/label_choose_number_of_questions"
            android:textSize="30sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/label_choose_quiz_type"
            android:textSize="30sp"
            tools:ignore="HardcodedText" />

        <RadioGroup
            android:id="@+id/radioGroupQuestionCount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonTenQuestions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:onClick="onNumQuestionsClicked"
                android:text="@string/button_ten_questions" />

            <RadioButton
                android:id="@+id/radioButtonThirtyQuestions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:onClick="onNumQuestionsClicked"
                android:text="@string/button_thirty_questions" />

            <RadioButton
                android:id="@+id/radioButtonFiftyQuestions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:onClick="onNumQuestionsClicked"
                android:text="@string/button_fifty_questions" />
        </RadioGroup>

        <ScrollView
            android:id="@+id/deckListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.24">

            <LinearLayout
                android:id="@+id/deckListLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="bottom"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonTakeQuiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:foregroundGravity="bottom"
            android:onClick="takeQuizButtonClicked"
            android:text="@string/button_take_quiz" />
    </LinearLayout>

</LinearLayout>