<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_edit_deck"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.psu.capstonew17.pdxaslapp.CreateEditDeckActivity">

    <EditText
        android:id="@+id/deckNameField"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:hint="@string/CreateDeck_DeckName"
        android:textColorHint="@color/lightGray"
        android:background="@drawable/background_dark_border"
        android:layout_margin="3dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CreateDeck_SelectCards" />

    <TextView
        android:id="@+id/noCardsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_cards"/>

    <include layout="@layout/list_items"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/bttn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>