<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.psu.capstonew17.pdxaslapp.VideoAspectRatioLayout
        android:id="@+id/layout"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <VideoView
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5dp"
            android:id="@+id/videoView_flashCard" />

    </com.psu.capstonew17.pdxaslapp.VideoAspectRatioLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom">

        <Button
            android:id="@+id/button_showAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_flash_card_show_answer" />

        <Button
            android:id="@+id/button_nextFlashCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_flash_card_next_question" />

    </TableRow>

    <TextView
        android:id="@+id/textView_FlashCardAnswer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:hint="@string/prompt_text_field"
        android:gravity="center"
        android:padding="8dp"
        android:text=""
        android:textSize="18sp" />


</LinearLayout>



